--- a/exam_problems/ep-1.tex
+++ b/exam_problems/ep-1.tex
@@ -28,6 +28,14 @@
 		\end{pmatrix}
 	$$
 
+	$$
+		\begin{cases}
+			p_1(t)' = - p_1(t) + 3 p_3(t), \\
+			p_2(t)' = - 2 p_2(t),          \\
+			p_3(t)' = p_1(t) + 2 p_2(t) - 3 p_3(t).
+		\end{cases}
+	$$
+
 	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
 	задаётся условиями
 	$$
@@ -93,6 +101,14 @@
 			0  & -2 & 2  \\
 			2  & 0  & -2
 		\end{pmatrix}
+	$$
+
+	$$
+		\begin{cases}
+			p_1(t)' = - 3 p_1(t) + 2 p_3(t), \\
+			p_2(t)' = 2 p_1(t) - 2 p_2(t),   \\
+			p_3(t)' = p_1(t) + 2 p_2(t) - 2 p_3(t).
+		\end{cases}
 	$$
 
 	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
@@ -162,6 +178,14 @@
 		\end{pmatrix}
 	$$
 
+	$$
+		\begin{cases}
+			p_1(t)' = - 3 p_1(t) + 3 p_2(t),          \\
+			p_2(t)' = 3 p_1(t) - 5 p_2(t) + 2 p_3(t), \\
+			p_3(t)' = 2 p_2(t) - 2 p_3(t).
+		\end{cases}
+	$$
+
 	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
 	задаётся условиями
 	$$
@@ -228,6 +252,14 @@
 			2  & -5 & 3  \\
 			1  & 1  & -2
 		\end{pmatrix}
+	$$
+
+	$$
+		\begin{cases}
+			p_1(t)' = - 5 p_1(t) + 2 p_2(t) + p_3(t), \\
+			p_2(t)' = 2 p_1(t) - 5 p_2(t) + p_3(t),   \\
+			p_3(t)' = 3 p_1(t) + 3 p_2(t) - 2 p_3(t).
+		\end{cases}
 	$$
 
 	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
@@ -303,6 +335,14 @@
 		\end{pmatrix}
 	$$
 
+	$$
+		\begin{cases}
+			p_1(t)' = - 3 p_1(t) + p_2(t),          \\
+			p_2(t)' = p_1(t) - 2 p_2(t) + 2 p_3(t), \\
+			p_3(t)' = 3 p_1(t) + p_2(t) - 2 p_3(t).
+		\end{cases}
+	$$
+
 	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
 	задаётся условиями
 	$$
@@ -370,6 +410,14 @@
 		\end{pmatrix}
 	$$
 
+	$$
+		\begin{cases}
+			p_1(t)' = - 8 p_1(t) + p_2(t) + 5 p_3(t), \\
+			p_2(t)' = - 3 p_2(t) + 3 p_3(t),          \\
+			p_3(t)' = 8 p_1(t) + 2 p_2(t) - 8 p_3(t).
+		\end{cases}
+	$$
+
 	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
 	задаётся условиями
 	$$
@@ -435,6 +483,14 @@
 			2  & -5 & 3  \\
 			1  & 2  & -3
 		\end{pmatrix}
+	$$
+
+	$$
+		\begin{cases}
+			p_1(t)' = - 6 p_1(t) + 2 p_2(t) + p_3(t), \\
+			p_2(t)' = p_1(t) - 5 p_2(t) + 2 p_3(t),   \\
+			p_3(t)' = 5 p_1(t) + 3 p_2(t) - 3 p_3(t).
+		\end{cases}
 	$$
 
 	Стационарное распределение $\overline r=(r_1,r_2,r_3)$
